Skip to content

Leak with m3u playlist

Tested while playing a video with the submitted ytdl.c module.

=================================================================
==755706==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 64 byte(s) in 1 object(s) allocated from:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f45c054bf41 in operator new(unsigned long) /build/gcc/src/gcc/libsanitizer/asan/asan_new_delete.cpp:99
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f45969b4fbd  (<unknown module>)

Direct leak of 8 byte(s) in 1 object(s) allocated from:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f45c054a459 in __interceptor_malloc /build/gcc/src/gcc/libsanitizer/asan/asan_malloc_linux.cpp:145
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f45aa169170 in ReadDir ../../modules/demux/playlist/m3u.c:322
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f45a936e535 in Demux ../../modules/demux/directory.c:36
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f45c022afcb in demux_Demux ../../include/vlc_demux.h:303
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f45c022afcb in MainLoopDemux ../../src/input/input.c:551
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f45c022afcb in MainLoop ../../src/input/input.c:697
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f45c022e917 in Run ../../src/input/input.c:478
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f45bfee73e8 in start_thread (/usr/lib/libpthread.so.0+0x93e8)

SUMMARY: AddressSanitizer: 72 byte(s) leaked in 2 allocation(s).
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information