playlist: m3u: fix memory leak (#25138)

The array of options was not released when the meta object was cleaned.

Fix #25138